# vault

./: .gitignore  LICENSE  README.md  index.html  jest.config.js  jest.setup.js  log.txt  package-lock.json  package.json  vite.config.js
mcp-servers/filesystem-server-rust/: Cargo.toml  README.md  tasks.md  test-integration.sh
mcp-servers/filesystem-server-rust/src/: filesystem.rs  lib.rs  main.rs  protocol.rs  server.rs  transport.rs  transport_line.rs
mcp-servers/filesystem-server-rust/tests/: filesystem_operations_tests.rs  mcp_protocol_tests_v2.rs  test_harness.rs
mcp-servers/filesystem-server-rust/tests/common/: mod.rs
mcp-servers/git-server-rust/: Cargo.toml  mcp-git-server-aarch64-apple-darwin
mcp-servers/git-server-rust/src/: main.rs
mcp-servers/search-server-rust/: Cargo.toml
mcp-servers/search-server-rust/src/: main.rs  transport_line.rs
src/: TabBar.js  (+5 more)
src-tauri/: Cargo.toml  Welcome.md  run_identity_tests.sh  tauri.conf.json  test-task-validation.md  test_migration  test_migration.rs  test_task_frontmatter_integration  test_task_frontmatter_integration.rs
src-tauri/.aura/: editor_preferences.json
src-tauri/.docs/: CHANGELOG.md  LESSONS.md
src-tauri/.vault/: editor_preferences.json
src-tauri/capabilities/: main.json
src-tauri/src/: ai_settings.rs  ai_settings_multi.rs  ai_stream.rs  app_state.rs  auth.rs  editor.rs  lib.rs  main.rs  mcp_settings.rs  pdf_export.rs  refactored_app_state.rs  vault.rs  vault_agent_commands.rs  vault_id.rs  vault_settings.rs  widget_settings.rs  window_commands.rs  window_commands_basic.rs  window_factory.rs  window_lifecycle.rs  window_state.rs
src-tauri/src/commands/: ghostty.rs  graph.rs  license.rs  mcp_config.rs  mod.rs  pty.rs  search.rs  sync.rs  task_commands.rs  task_commands_test.rs  task_index_commands.rs  util.rs  uuid_commands.rs  wikilink.rs  wikilink_graph.rs.bak
src-tauri/src/csv/: commands.rs  mod.rs  processor.rs  schema_store.rs  types.rs
src-tauri/src/docker/: mod.rs  shared.rs
src-tauri/src/graph/: debug_logger.rs  embeddings.rs  embeddings_updated.rs  manager.rs  metrics.rs  mod.rs  neo4j.rs  neo4j_broken.rs  qdrant.rs  qdrant_http.rs  schema.rs  semantic_relationships.rs  shared_config.rs  simple_sync.rs  simple_sync_updated.rs  sync.rs  update_queue.rs  vault_graph_sync.rs  vault_isolation.rs  wikilink_integration.rs
src-tauri/src/identity/: cache.rs  mod.rs  tests.rs  uuid.rs
src-tauri/src/identity/api_updates/: mod.rs  tests.rs
src-tauri/src/identity/frontmatter/: mod.rs  task_integration_tests.rs  task_tests.rs  tasks.rs  tests.rs
src-tauri/src/identity/migration/: mapper.rs  mod.rs  report.rs  scanner.rs  tests.rs
src-tauri/src/identity/sidecar/: mod.rs  tests.rs
src-tauri/src/identity/tasks/: identity.rs  identity_test.rs  mod.rs  parser.rs  parser_test.rs
src-tauri/src/identity/watcher/: deletion_cache.rs  mod.rs  rename_detector.rs  tests.rs
src-tauri/src/license/: fingerprint.rs  mod.rs  service.rs  storage.rs  types.rs  validation.rs
src-tauri/src/mcp/: commands.rs  error.rs  mod.rs  process.rs  setup.rs  test_debug.rs  transport.rs  types.rs
src-tauri/src/pdf_intelligence/: commands.rs  extractor.rs  mod.rs  types.rs
src-tauri/src/plugin_runtime/: commands.rs  ipc_commands.rs  mod.rs  permission_commands.rs
src-tauri/src/plugin_runtime/apis/: mod.rs
src-tauri/src/plugin_runtime/cli/: mod.rs  tests.rs
src-tauri/src/plugin_runtime/demo/: test_plugin.html
src-tauri/src/plugin_runtime/dev_server/: mod.rs  tests.rs
src-tauri/src/plugin_runtime/ipc/: bridge.rs  channel.rs  integration_test.rs  mod.rs  plugin_api_handler.rs  protocol.rs
src-tauri/src/plugins/: commands.rs  manager.rs  mod.rs  scanner.rs  types.rs
src-tauri/src/search/: fusion.rs  hybrid.rs  mod.rs  types.rs
src-tauri/src/tasks/: index.rs  index_test.rs  migration.rs  migration_test.rs  mod.rs
src-tauri/tests/: TEST_REPORT.md  identity_integration.rs  identity_validation.rs  readwise_integration.rs  readwise_integration_test.rs
(+391 files in other folders)
