[package]
name = "mcp-filesystem-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
