[package]
name = "mcp-git-server"
version = "1.0.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.14.0"
