[package]
name = "mcp-search-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tantivy = "0.22.0"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11.1"
walkdir = "2.5.0"
tempfile = "3.14.0"
anyhow = "1.0.98"
